# bulloh-plotter

./: .gitignore  README.md  config.py  lambda_function.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml
controllers/: aws_controller.py  notion_controllers.py  plotter_controller.py
data/constants/: expected_time_metrics.py  habits_time.py  time_metrics.py
data/constants/plot_settings/: chart_types.py  time_chart_settings.py
data/payloads/: notion_payloads.py
src/: _config.py  aws_client.py  bulloh_plotter.py  general_utilities.py
src/data/constants/: expected_time_metrics.py  habits_time.py  time_metrics.py
src/data/constants/plot_settings/: chart_types.py  time_chart_settings.py
src/templates/: habits_template.html  stats_template.html  week_habits_template.html
templates/: month_habits_template.html  week_habits_template.html
utilities/: general_utilities.py
